Fix layout spacing for landing page

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -75,6 +75,12 @@ body.menu-colors #content-area, body.fixed-second #content-area, body.node-type-
   padding: 19px 30px 0 30px;
 }
 
+
+
+body.node-type-fixed-width-landing-page #content-area {
+  margin-left: 0px;
+}
+
 body.menu-colors-hide-sidebar-left #content-area {
   margin-left: 0px;
 }
@@ -95,6 +101,10 @@ body.section-welldevils #content-area {
 
 .menu-colors .node-inner {
   margin-right: 130px;
+}
+
+body.node-type-fixed-width-landing-page .node-inner {
+  margin-right: 0px;
 }
 
 .menu-colors-hide-sidebar-left .node-inner {
@@ -175,23 +185,6 @@ ul.text-style-2 li {
   padding-left: 0px;
   background-color: #FFF;
 }
-  
-#hp-container {
-  background-color:white;
-  margin:0; 
-  padding:0 10px; 
-  width:1000px; 
-  ul {
-   list-style-type: none;
-   margin:0;
-  }
-}
-.cf-left-col {
-  float:left;
-  margin:10px 10px 0 40px;
-  width:550px;
-}
- 
 
 .menu-colors #sidebar-left a:hover {
   text-decoration: none;
@@ -204,31 +197,6 @@ body.not-front #content-area a {
   }
 }
 
-.cf-center-col {
-  float:left;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  margin: 0px 20px 0 60px;
-  padding-left: 25px;
-  width:200px;
-  ul {
-    padding:10px 0 0 0;
-    margin:0 0 10px 0;
-    li {
-      list-style-type: none;
-      padding:0px 0;  
-      margin:0;
-    }
-  }
-}
- 
- 
-.cf-right-col {
-  float:left;
-  margin:0;   
-  width:300px;
-}
 
 #block-views-sidebar_menu-block_1 ul ul ul ul {
   margin-left: 10px;
